Spiral Abyss Updated

--- a/spiral-abyss/team_images/01-29-25/index.html
+++ b/spiral-abyss/team_images/01-29-25/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/5860cbe9-55e7-4524-82cb-8753958cad26?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/360dba9e-3260-4a0c-9149-afae6d318227?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.3 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.2 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: <br><br>This abyss was one of the fastest clears I've ever done, probably because of the extremely favorable blessings, and also because in my pursuit of a C2 Lan Yan I got another constellation for Arlecchino. Hard to be mad about it. It's a good one and her team absolutely annihiliates the first side. On the back half I used Chasca again, mainly because I wanted to get Citlali and Pyro Traveler through abyss for the first time as well. I could have probably ran different teams to do this since my first side was so strong, but I am also still loving Chasca's gameplay so much that I want to keep using her.<br><br><br></p>
+<p><br><br>Comments: <br><br>I got Chasca by accident going for Ororon, so now she needed to clear abyss. I do not like Chasca's character arc or her visual design, but I am surprised by how much I like how her kit works and feels. She seems like she has some high potential for unconventional team compositions and the big gun she rides is just really dumb and fun. On the front side of the abyss, I decided not to mess around and just brought a bunch of raw power so I could enjoy Chasca.<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
