--- a/spiral-abyss/team_images/02-22-25/index.html
+++ b/spiral-abyss/team_images/02-22-25/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/d1961650-d0d1-42e5-9dbe-b926eb008702?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/5860cbe9-55e7-4524-82cb-8753958cad26?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.3 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.3 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: <br><br>To celebrate the Philadelphia Eagles winning to Super Bowl, I cleared the abyss with two carries that deal green damage and fly. It also happened to be a favorable abyss for both of them and I like playing both Wanderer and Chasca a lot. I think that Chasca's team could have been tuned a lot better, but it all worked out.<br><br><br></p>
+<p><br><br>Comments: <br><br>This abyss was one of the fastest clears I've ever done, probably because of the extremely favorable blessings, and also because in my pursuit of a C2 Lan Yan I got another constellation for Arlecchino. Hard to be mad about it. It's a good one and her team absolutely annihiliates the first side. On the back half I used Chasca again, mainly because I wanted to get Citlali and Pyro Traveler through abyss for the first time as well. I could have probably ran different teams to do this since my first side was so strong, but I am also still loving Chasca's gameplay so much that I want to keep using her.<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
