--- a/deadly-assault/team_images/05-06-25/index-2.html
+++ b/deadly-assault/team_images/05-06-25/index-2.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/dsNNdPMPBYkRcVZxjjqzbb?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/6aabc07d-3af9-4813-bc3b-d3207e570200?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 1.7<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 1.6<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -97,20 +97,21 @@
 	<img src="team_images/photo-6.png" width="100%"></label></div>
 	<h3 align="center">Team 3</h3>
 	<div class="click-zoom"><label><input type="checkbox">
+	<img src="team_images/photo-1.png" width="100%"></label></div>
+	<div class="click-zoom"><label><input type="checkbox">
 	<img src="team_images/photo-7.png" width="100%"></label></div>
 	<div class="click-zoom"><label><input type="checkbox">
 	<img src="team_images/photo-8.png" width="100%"></label></div>
-	<div class="click-zoom"><label><input type="checkbox">
-	<img src="team_images/photo-9.png" width="100%"></label></div>
 	</div>
 </div>
 
-<p><br><br>Comments: <br><br>I skpped the last Deadly Assault posting because my video got really messed up. Anyway, I'm back and the game mode is harder than ever. I think for every stage this cycle I cleared the 10k threshhold by less than 100 points. But! I still did it. Bringer is an annoying and bad boss, but everything else is pretty manageable. One small editor's note: Qingyi used The Restrained W-Engine but for some reason it isn't showing in her character card.<br><br><br></p>
+<p><br><br>Comments: <br><br>This is now a deadly assault page! I do not think that Shiyu Defense brings the amount of challenge that demands a record of clears for my own archival purposes, but this mode definitely does. This cycle was perhaps the easiest clear to get to-date, which I find odd since my roster and stats haven't changed appreciably. I think what happened is a combination of my own skill level getting higher matched up with a cycle that is tuned down now that the game isn't promoting Miyabi, the most broken character ever. Something else to note is that I didn't even bother trying to shoehorn Evelyn into any of these teams because I think she is a liability against basically all of these bosses. So much for tier lists!<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
 				<ul class="icons">
 					<li><a rel="me" href="https://elekk.xyz/@campbell" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
+					<li><a href="https://twitter.com/smallscreened" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://ko-fi.com/campbellbird" class="icon solid fa-mug-hot"><span class="label">Ko-Fi</span></a></li>
 					<li><a href="https://github.com/smallscreened" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href=mailto:campbell@smallscreen.info class="icon fa-envelope"><span class="label">Email</span></a></li>
