Spiral Abyss Update

--- a/spiral-abyss/team_images/05-18-25/index.html
+++ b/spiral-abyss/team_images/05-18-25/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/31XMAorNHR6TJPphYJivEK?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/uSLzJutfaoYgKM7ZB5JRE6?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.6 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.5 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: Ayato mains: We are so back! For real, Ayato is probably the most relateable video game character I've come across, so when I see a chance to buff or just keep playing him, I celebrate it. Escoffier may largely be seen as a support who redefines the power ceiling of cryo, but she also does a ton to help hydro carries. What's more is that the buffs from Furina, Escoffier, and Yelan can stack on him and his normal attacks can trigger Yelan's burst. It's a great team and it feels amazing to play this abyss, which admittedly feels like one of the easier cycles in awhile. I also had no problem running a Kinich burning team that also added Iansan, which was an interesting twist on what I usually do.<br><br><br><br><br></p>
+<p><br><br>Comments: Not much to say here except that I think Kinich's burning team just feels so strong. I still love it, especially with Dehya holding Deepwood to buff Kinich and Emilie. Great team.<br><br><br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
