Deadly Assault Updates

--- a/deadly-assault/team_images/05-28-25/index.html
+++ b/deadly-assault/team_images/05-28-25/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/dk3XYtAB1aocySAFyh1hLY?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/dsNNdPMPBYkRcVZxjjqzbb?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 1.7 - Cycle 2<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 1.7<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -105,7 +105,7 @@
 	</div>
 </div>
 
-<p><br><br>Comments: <br><br>I have now pulled everyone I want in Zenless Zone Zero, and it feels good! Had some interesting clears here because I am missing what might be considered key "meta" units, but I enjoyed playing all of these teams. The Qingyi/Zhu Yuan combo has felt good for basically a year, Vivian is really cool and I love Burnice, though pairing them together can feel like I'm fighting for energy, and Hugo... man, Hugo is awesome! I'm glad that in addition to being one of the coolest and best-acted characters in the game his fighting style is also super satisfying.<br><br><br></p>
+<p><br><br>Comments: <br><br>I skpped the last Deadly Assault posting because my video got really messed up. Anyway, I'm back and the game mode is harder than ever. I think for every stage this cycle I cleared the 10k threshhold by less than 100 points. But! I still did it. Bringer is an annoying and bad boss, but everything else is pretty manageable. One small editor's note: Qingyi used The Restrained W-Engine but for some reason it isn't showing in her character card.<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
