Deadly Assault Update

--- a/deadly-assault/team_images/06-04-25/index.html
+++ b/deadly-assault/team_images/06-04-25/index.html
@@ -47,37 +47,37 @@
 
 </style>
 	<head>
-		<title>Deadly Assault Tracker</title>
+		<title>Shiyu Defense Tracker</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main-spiral.css" />
 <!--/* Link Preview Stuff */-->
 <!-- Primary Meta Tags -->
-<title>Deadly Assault Tracker</title>
-<meta name="title" content="ZZZ Deadly Assault Tracker">
+<title>Shiyu Defense Tracker</title>
+<meta name="title" content="ZZZ Shiyu Defense Tracker">
 <meta name="description" content="Check Out Stats and Video">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://smallscreen.info/deadly-assault">
-<meta property="og:title" content="Deadly Assault Tracker">
+<meta property="og:url" content="https://smallscreen.info/shiyu-defense">
+<meta property="og:title" content="Shiyu Defense Tracker">
 <meta property="og:description" content="Check Out Stats and Video">
 <!-- meta property="og:image" content="assets/images/sstv.png" -->
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://smallscreen.info/deadly-assault">
-<meta property="twitter:title" content="Deadly Assault Tracker">
+<meta property="twitter:url" content="https://smallscreen.info/shiyu-defense">
+<meta property="twitter:title" content="Shiyu Defense Tracker">
 <meta property="twitter:description" content="Check Out Stats and Video">
 <meta property="twitter:image" content="..assets/images/spiral.png">
 	
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/erNUzjobea8UR4PnfVknek?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/dk3XYtAB1aocySAFyh1hLY?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 1.7 - Cycle 3<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 1.7 - Cycle 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -105,7 +105,7 @@
 	</div>
 </div>
 
-<p><br><br>Comments: <br><br>Deadly Assaults feel like they refresh too fast! Either that or I've just been so preoccupied with building so many characters at once that it feels like I don't have time between challenges to get them all online. That was definitely the case here, as I plan to bench Caesar from Hugo's team for Lycaon just as soon as I have enough resources to actually build him up. Not a lot to comment on in these as I essentially beat the bosses the same way I always do. I'll just say for the record I think Bringer is a bad boss design. I don't necessarily mind enemies that ask you to do specific things to beat them but when the specific thing is a complete pain the ass to do with basically all but one character it's pretty annoying.<br><br><br></p>
+<p><br><br>Comments: <br><br>I have now pulled everyone I want in Zenless Zone Zero, and it feels good! Had some interesting clears here because I am missing what might be considered key "meta" units, but I enjoyed playing all of these teams. The Qingyi/Zhu Yuan combo has felt good for basically a year, Vivian is really cool and I love Burnice, though pairing them together can feel like I'm fighting for energy, and Hugo... man, Hugo is awesome! I'm glad that in addition to being one of the coolest and best-acted characters in the game his fighting style is also super satisfying.<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
