--- a/deadly-assault/team_images/06-17-25/index.html
+++ b/deadly-assault/team_images/06-17-25/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/7zajqbyBvEQzKCd4XgiNWk?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/erNUzjobea8UR4PnfVknek?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 2.0 - Cycle 1<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 1.7 - Cycle 3<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -105,7 +105,7 @@
 	</div>
 </div>
 
-<p><br><br>Comments: I don't understand why anyone likes Yixuan. She looks like she's wearing a diaper, has basically zero personality, and her gold damage accents--while cool-looking--are confusing. Of course, there's also the fact that she's the game's latest character pushing the power curve, which I imagine has something to do with it. That said, as someone who will never own Yixuan or Miyabi, I'm pleased to say Deadly Assault is still somewhat manageable. I was worried that the addition of the miasma mechanics and the boss that uses them I'd hit kind of a self-made difficulty wall I couldn't scale, but it turned out to be passable. It's clear my performance is dipping in relation to the rest of the community, though. The summary cards I generate usually report I'm clearing with an average score (around 50%), but this one is 34%, easily my lowest. A win's a win though!<br><br><br><br><br></p>
+<p><br><br>Comments: <br><br>Deadly Assaults feel like they refresh too fast! Either that or I've just been so preoccupied with building so many characters at once that it feels like I don't have time between challenges to get them all online. That was definitely the case here, as I plan to bench Caesar from Hugo's team for Lycaon just as soon as I have enough resources to actually build him up. Not a lot to comment on in these as I essentially beat the bosses the same way I always do. I'll just say for the record I think Bringer is a bad boss design. I don't necessarily mind enemies that ask you to do specific things to beat them but when the specific thing is a complete pain the ass to do with basically all but one character it's pretty annoying.<br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
