Deadly Assault Update

--- a/deadly-assault/team_images/07-18-25/index.html
+++ b/deadly-assault/team_images/07-18-25/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/44izXeDbV4BjMYt5FR37XP?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/7zajqbyBvEQzKCd4XgiNWk?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 2.0 - Cycle 2<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 2.0 - Cycle 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -105,7 +105,7 @@
 	</div>
 </div>
 
-<p><br><br>Comments: Zhu Yuan is eternal! I know a lot of chatter surrounding ZZZ includes concerns about powercreep, and--while I think a lot of it is warranted--it is nice to be able to show that the rising tide of agent power hasn't necessarily meant the encounter design is getting harder at the same rate. That said I did put the latest stun support on her team, so... ¯\_(ツ)_/¯. While we're on the subject, I hope the game shifts away from its wild obsession with anomaly characters and give some more love to attack agents. I think that if ZZZ didn't have such a satisfying parry/daze/stun system, I might not still be playing it. Anomaly and disorder are interesting conceptually and create more opportunities to mix and match, but it can also sidestep what I honestly think is the best-feeling part of the entire game.<br><br><br><br><br></p>
+<p><br><br>Comments: I don't understand why anyone likes Yixuan. She looks like she's wearing a diaper, has basically zero personality, and her gold damage accents--while cool-looking--are confusing. Of course, there's also the fact that she's the game's latest character pushing the power curve, which I imagine has something to do with it. That said, as someone who will never own Yixuan or Miyabi, I'm pleased to say Deadly Assault is still somewhat manageable. I was worried that the addition of the miasma mechanics and the boss that uses them I'd hit kind of a self-made difficulty wall I couldn't scale, but it turned out to be passable. It's clear my performance is dipping in relation to the rest of the community, though. The summary cards I generate usually report I'm clearing with an average score (around 50%), but this one is 34%, easily my lowest. A win's a win though!<br><br><br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
