--- a/deadly-assault/team_images/07-30-25/index.html
+++ b/deadly-assault/team_images/07-30-25/index.html
@@ -74,7 +74,7 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/4MpCwCwCoayUUjvKHSveHD?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/44izXeDbV4BjMYt5FR37XP?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
 <div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 2.0 - Cycle 2<p style="font-size:14px;color: rgb(64,64,64);">
@@ -105,7 +105,7 @@
 	</div>
 </div>
 
-<p><br><br>Comments: Waiting to see if enka.network can let me upload build cards, but I did Deadly Assault right as it came out. Not a ton to say except that I can't wait until Alice comes out. Only thing of note I will stress that seems to go unmentioned: Ju Fufu is awesome for every attack agent. Her damage, daze, and decibel limit increase just makes every clear with her on the team that much more comfortable. Cool stuff, great design. Just in time for what looks like some really questionable character design choices coming down the pike.<br><br><br><br><br></p>
+<p><br><br>Comments: Zhu Yuan is eternal! I know a lot of chatter surrounding ZZZ includes concerns about powercreep, and--while I think a lot of it is warranted--it is nice to be able to show that the rising tide of agent power hasn't necessarily meant the encounter design is getting harder at the same rate. That said I did put the latest stun support on her team, so... ¯\_(ツ)_/¯. While we're on the subject, I hope the game shifts away from its wild obsession with anomaly characters and give some more love to attack agents. I think that if ZZZ didn't have such a satisfying parry/daze/stun system, I might not still be playing it. Anomaly and disorder are interesting conceptually and create more opportunities to mix and match, but it can also sidestep what I honestly think is the best-feeling part of the entire game.<br><br><br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
