--- a/spiral-abyss/team_images/08-17-25/index.html
+++ b/spiral-abyss/team_images/08-17-25/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/aAcsnNPfZBUHGv4rBYFq3s?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/47qDDC3TiMTQVAYpQjxeNU?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.8 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.7 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: Despite the relatively slow clear time, this was an incredibly easy abyss. I did no restarts and played pretty sloppily and still did just fine. I also brought another two characters through abyss for the first time: Ineffa and Dori. I'm sure Dori is the weakest link, but I do think there's something to the idea of Dori as a Furina enabler. I think a major part of why this clear felt so easy is that energy was basically never a problem thanks to Dori on side one and two characters with favonius lances on side two.<br><br><br><br><br></p>
+<p><br><br>Comments: Ok, so I know I said who needs Skirk last time, and... uh... it turns out the answer is me. I wasn't able to clear Stygian Onslaught at difficulty 5 because the overseer device is a poorly designed boss enounter that only really allows for one kind of team to beat it and at the difficulty is is tuned to in that separate mode it was simply not possible for me to build a team that matched the required archetype and deal enough damage to it. But, now that I have pulled Skirk, confirmed she is basically designed to make that boss a cakewalk, and played her story quest which cleared up most of my misgivings with her design (no spoilers!), I am actually glad that I have her now. Performance-wise, the proof is also in the pudding: I'm pretty sure this is the fastest clear I've ever posted on here. I clearly had the right carries, but I also used off-meta supports like Chongyun and Lisa and still blazed through this lineup.<br><br><br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
