--- a/deadly-assault/team_images/08-29-25/index.html
+++ b/deadly-assault/team_images/08-29-25/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/bAJHtvhypp8wVxiDaH9stT?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/jp1rn5LqsMDRhpyUc8J1aQ?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 2.1 - Cycle 2<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 2.1 - Cycle 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -105,7 +105,7 @@
 	</div>
 </div>
 
-<p><br><br>Comments: Not much to say about this clear, except perhaps that I'd like to wax poetic about the Typhon Destroyer boss. Out of every other big bad enemy in Zenless this one feels like it has a very tangible and satisfying reward for playing around its mechanics. Dodging it accelerates the special stagger you can trigger, and doing so lets you stun it faster, and I'm not sure many other bosses are this clearly designed to give you such a clear reward for playing well. I hope more bosses get designed like this, but I'm pretty sure this guy was in 1.0 and they haven't made anything like it since.<br><br><br><br><br></p>
+<p><br><br>Comments: Enka's fixed so I can post stats of my clear again. Alice is awesome, and I'm glad to see a lot of Zenless endgame content not require complete team optimization. Otherwise, I would not still be getting so much mileage out of Burnice and finding ways to clear with anomaly teams that aren't "meta." This one was pretty easy, except I had to finally update the discs on the stunners for my Hugo team to maximize buffs. Once I did that, everything was pretty breezy.<br><br><br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
