--- a/deadly-assault/team_images/09-13-25/index.html
+++ b/deadly-assault/team_images/09-13-25/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/a3kxvzkFuoBt6aVSgpmHnx?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/bAJHtvhypp8wVxiDaH9stT?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 2.2 - Cycle 1<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 2.1 - Cycle 2<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -105,7 +105,7 @@
 	</div>
 </div>
 
-<p><br><br>Comments: I wanted more bosses like Typhon Destroyer in my last post and it's like Hoyo was listening to me! The Defiler is yet another banger boss that is way more about recognizing attack patterns and building knowledge and reflexes than it is about just bringing an optimized team. I also want to shout out Evelyn, here. I think she is low-key the best carry in the game. She can kinda brute force just about anything without fire resistances, is fun to play, and has a reasonable amount of team flexibility.<br><br><br><br><br></p>
+<p><br><br>Comments: Not much to say about this clear, except perhaps that I'd like to wax poetic about the Typhon Destroyer boss. Out of every other big bad enemy in Zenless this one feels like it has a very tangible and satisfying reward for playing around its mechanics. Dodging it accelerates the special stagger you can trigger, and doing so lets you stun it faster, and I'm not sure many other bosses are this clearly designed to give you such a clear reward for playing well. I hope more bosses get designed like this, but I'm pretty sure this guy was in 1.0 and they haven't made anything like it since.<br><br><br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
