Spiral Abyss Updates

--- a/spiral-abyss/team_images/09-18-25/index.html
+++ b/spiral-abyss/team_images/09-18-25/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src=https://video.hardlimit.com/videos/embed/guBDWxc6BpafT4SzRcoRzf?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/aAcsnNPfZBUHGv4rBYFq3s?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 6.0 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 5.8 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: I tried to get a little too cute with my clears to take advantage of the abyssal blessings, hence why my floor 11 clears feature Kaveh lol. In any case, I made a switch over and think these teams did really well. For my second time clearing with Dori--I gotta say--she might not exactly be meta, but she is very comfortable to play, especially with Chasca.<br><br><br><br><br></p>
+<p><br><br>Comments: Despite the relatively slow clear time, this was an incredibly easy abyss. I did no restarts and played pretty sloppily and still did just fine. I also brought another two characters through abyss for the first time: Ineffa and Dori. I'm sure Dori is the weakest link, but I do think there's something to the idea of Dori as a Furina enabler. I think a major part of why this clear felt so easy is that energy was basically never a problem thanks to Dori on side one and two characters with favonius lances on side two.<br><br><br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
