Deadly assault update

--- a/deadly-assault/team_images/09-24-25/index.html
+++ b/deadly-assault/team_images/09-24-25/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/aNyMprgnATf6t3EcorcNqQ?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
+	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/a3kxvzkFuoBt6aVSgpmHnx?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 2.2 - Cycle 2<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">DEADLY ASSAULT VER. 2.2 - Cycle 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -105,7 +105,7 @@
 	</div>
 </div>
 
-<p><br><br>Comments: Don't have too much to say about this clear except that I'm getting stretched thin on my viable disorder teams. Thankfully Piper is still awesome, thanks in part to Burnice, who has not fallen off as much as people seem to like to say she has.<br><br><br><br><br></p>
+<p><br><br>Comments: I wanted more bosses like Typhon Destroyer in my last post and it's like Hoyo was listening to me! The Defiler is yet another banger boss that is way more about recognizing attack patterns and building knowledge and reflexes than it is about just bringing an optimized team. I also want to shout out Evelyn, here. I think she is low-key the best carry in the game. She can kinda brute force just about anything without fire resistances, is fun to play, and has a reasonable amount of team flexibility.<br><br><br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
