Spiral Abyss Update

--- a/spiral-abyss/team_images/11-19-25/index.html
+++ b/spiral-abyss/team_images/11-19-25/index.html
@@ -74,10 +74,10 @@
 	
 	</head>
 <body>
-	<p align="center"><iframe class="video" width="560" src="https://video.hardlimit.com/videos/embed/td7MZthxnDF3srNxj6r9hu?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
+	<p align="center"><iframe class="video" width="560" src=https://video.hardlimit.com/videos/embed/guBDWxc6BpafT4SzRcoRzf?warningTitle=0" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><h4 align="center">Floor 12</h4>
 	
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 6.1 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 6.0 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">
 <div class="column">
 	<h3 align="center">Team 1</h3>
 	<div class="click-zoom"><label><input type="checkbox">
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: We are so back! I skipped last cycle's posting because I was at an impasse with gacha games and did some internal inventory. Ultimately, I decided that ZZZ was taking up too much of my time and had lost too much of its own identity for me to keep up with its increasing time investment demands. So now just playing Genshin feels easy breezy, which you might be able to tell from this super fast clear using two characters with no leveled talents lol. Nefer is really fun even though I'll be the first to admit she can be clunky. She really satisfies when you nail her setup and combo though, much like Hu Tao back in the day.<br><br><br><br><br></p>
+<p><br><br>Comments: I tried to get a little too cute with my clears to take advantage of the abyssal blessings, hence why my floor 11 clears feature Kaveh lol. In any case, I made a switch over and think these teams did really well. For my second time clearing with Dori--I gotta say--she might not exactly be meta, but she is very comfortable to play, especially with Chasca.<br><br><br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
