--- a/spiral-abyss/index.html
+++ b/spiral-abyss/index.html
@@ -102,7 +102,7 @@
 	</div>
 </div>
 	<img src="team_images/photo-9.png" width="100%">
-<p><br><br>Comments: We are so back! I skipped last cycle's posting because I was at an impasse with gacha games and did some internal inventory. Ultimately, I decided that ZZZ was taking up too much of my time and had lost too much of its own identity for me to keep up with its increasing time investment demands. So now just playing Genshin feels easy breezy, which you might be able to tell from this super fast clear using two characters with no leveled talents lol. Nefer is really fun even though I'll be the first to admit she can be clunky. She really satisfies when you nail her setup and combo though, much like Hu Tao back in the day. Feels good to be back!<br><br><br><br><br></p>
+<p><br><br>Comments: We are so back! I skipped last cycle's posting because I was at an impasse with gacha games and did some internal inventory. Ultimately, I decided that ZZZ was taking up too much of my time and had lost too much of its own identity for me to keep up with its increasing time investment demands. So now just playing Genshin feels easy breezy, which you might be able to tell from this super fast clear using two characters with no leveled talents lol. Nefer is really fun even though I'll be the first to admit she can be clunky. She really satisfies when you nail her setup and combo though, much like Hu Tao back in the day.<br><br><br><br><br></p>
 
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
