--- a/music/2025.html
+++ b/music/2025.html
@@ -137,16 +137,14 @@ body{
 } 
 </style>
 <body>
-<h2 align="center">6 Albums, 6 Singles (2024)</h2>
-<h3 align="center"><p>Click on an image for a player and links, or <a href="https://youtube.com/playlist?list=PLTm1tn5YD5gI5wnmG7B82Cdh9yEtGxXPP&si=sPKn9KHZjeMMbj7b">listen to everything in one playlist here.</a></p>
+<h2 align="center">6 Albums, 6 Singles (2025)</h2>
+<h3 align="center"><p>Click on an image for a player and links.</p>
 <p>Albums</p></h3>
 <div class="row">
 <div class="wrapper"><label for="reveal-player1" class="btn"><div class="btn"><img src="https://is1-ssl.mzstatic.com/image/thumb/Music221/v4/fd/c0/79/fdc079bc-4837-bbe3-f73c-0d848357fbf2/075679621214.jpg/512x512bb.png" style="width:100%"><div class="hovercap">Skrillex<br>Fuck U Skrillex You Think Ur Andy Warhol but Ur Not!! <3</div></div></label>
 <input type="checkbox" id="reveal-player1" role="button">
     
     <div id="player" style="position:absolute;height:100%;width:100%;"><iframe style="position:absolute;top:-100%;" width="100%" height="100%" align="center" src="https://odesli.co/embed/?url=https%3A%2F%2Fsong.link%2Fy%2FXwml50CG6LA&theme=dark" frameborder="0" allowfullscreen sandbox="allow-same-origin allow-scripts allow-presentation allow-popups allow-popups-to-escape-sandbox" allow="clipboard-read; clipboard-write"></iframe></div></div>
-    
-    <div id="player" style="position:absolute;height:100%;width:100%;"><iframe style="position:absolute;top:-100%;" width="100%" height="100%" align="center" src="https://odesli.co/embed/?url=https%3A%2F%2Falbum.link%2Fy%2FOLAK5uy_lj1bLzFigD2jyTtrcBxvihllErfgxiEzw&theme=dark" frameborder="0" allowfullscreen sandbox="allow-same-origin allow-scripts allow-presentation allow-popups allow-popups-to-escape-sandbox" allow="clipboard-read; clipboard-write"></iframe></div></div>
 
 <div class="wrapper"><label for="reveal-player2" class="btn"><div class="btn"><img src="https://is1-ssl.mzstatic.com/image/thumb/Music211/v4/0b/b8/f1/0bb8f1d7-1df0-20c0-9539-51d08058eeb1/5400863191436_Cover.jpg/512x512bb.png" style="width:100%"><div class="hovercap">Geese<br>Getting Killed</div></div></label>
 <input type="checkbox" id="reveal-player2" role="button">
@@ -211,13 +209,9 @@ body{
 			<footer id="footer">
 				<ul class="icons">
 					<li><a rel="me" href="https://elekk.xyz/@campbell" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
-					<li><a href="https://twitter.com/smallscreened" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://ko-fi.com/campbellbird" class="icon solid fa-mug-hot"><span class="label">Ko-Fi</span></a></li>
 					<li><a href="https://github.com/smallscreened" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href=mailto:campbell@smallscreen.info class="icon fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; namestolen.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a>, <a href="https://tinyletter.com">Tiny Letter</a></li>
 				</ul>
 			</footer>
 </body>
